kubernetes/gcp/gateway-api/deployment-users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
        version: v1
    spec:
      containers:
      - name: users
        image: hashicorp/http-echo:0.2.3
        args: ["-text=users v1"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: production
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: users
