kubernetes/gcp/gateway-api/gateway-edge.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge-gateway
  namespace: infra
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: demo-tls-secret
      allowedRoutes:
        namespaces:
          from: Same

---
