kubernetes/gcp/gateway-api/httproute-to-istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: edge-to-istio
  namespace: infra
spec:
  parentRefs:
  - name: istio-prod-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: istio-ingressgateway
      kind: Service
      namespace: istio-system
      port: 80
