kubernetes/gcp/gateway-api/networkpolicies.yaml
# network-policy-production.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: users-netpol
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: users
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: istio-system
    ports:
    - protocol: TCP
      port: 5678
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 53  # DNS
  - to:
    - namespaceSelector:
        matchLabels:
          name: production
